Solve a bug in Footer design was out of the screen

--- a/css/style.css
+++ b/css/style.css
@@ -798,6 +798,7 @@ background-color: rgba(248, 245, 245, 0.896);
 
 /* start footer */
 .footer {
+    box-sizing: border-box;
     width: 100%;
     background-color: #333;
     color: white;
